--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="app_name">Sup!</string>
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
+    <string name="start_new_game">Start New Game</string>
     <string name="profilepic">profilepic</string>
     <string name="title_activity_chat">ChatActivity</string>
     <string name="reg_mobile">Register your mobile</string>
